--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<form>
+		<h2>Feedback Form</h2>
+
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required><br>
+
+		<label for="portfolio">Website URL</label>
+		<input type="url" id="portfolio" placeholder="Portfolio" required><br>
+
+		<label for="favColor"> favourite colour</label>
+		<input type="color" id="favColor"  required><br>
+
+		<label for="likeness"> Likeness</label>
+		<input type="range" min="0" max="100" id="likeness"  required><br>
+
+		
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
