--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 		<h2>Feedback Form</h2>
 
 		<label for="name">Name</label>
-		<input type="text" id="name" placeholder="Name" required><br>
+		<input type="text" minlength="3" maxlength="50" id="name" placeholder="Name" required><br>
 
 		<label for="portfolio">Website URL</label>
 		<input type="url" id="portfolio" placeholder="Portfolio" required><br>
@@ -22,7 +22,7 @@
 		<label for="likeness"> Likeness</label>
 		<input type="range" min="0" max="100" id="likeness"  required><br>
 
-		
+		<button type="submit">submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
