--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form>
+	<form method="post">
 		<h2>Feedback Form</h2>
 
 		<label for="name">Name</label>
@@ -20,7 +20,7 @@
 		<input type="color" id="favColor"  required><br>
 
 		<label for="likeness"> Likeness</label>
-		<input type="range" min="0" max="100" id="likeness"  required><br>
+		<input type="range" min="1" max="100" id="likeness"  required><br>
 
 		<button type="submit">submit</button>
 	</form>
